// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-op9h3g"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-p0ao07"
      >
        Actor
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-6hwe8l rcx-css-ld0nzd"
      >
        App
      </div>
    </div>
    <div
      class="rcx-box rcx-box--full rcx-css-op9h3g"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-p0ao07"
      >
        App_id
      </div>
      <span
        class="rcx-skeleton rcx-skeleton--text"
      />
      <div
        class="rcx-box rcx-box--full rcx-css-6hwe8l rcx-css-ld0nzd"
      >
        app-id
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NoAppInfo without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-op9h3g"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-p0ao07"
      >
        Actor
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-6hwe8l rcx-css-ld0nzd"
      >
        App
      </div>
    </div>
    <div
      class="rcx-box rcx-box--full rcx-css-op9h3g"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-p0ao07"
      >
        App Id
      </div>
      <span
        class="rcx-skeleton rcx-skeleton--text"
      />
      <div
        class="rcx-box rcx-box--full rcx-css-6hwe8l rcx-css-ld0nzd"
      >
        app-id
      </div>
    </div>
  </div>
</body>
`;
